fixing unintended mobile issue where garage panel when expanded was off screen

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -16,7 +16,7 @@
         position: absolute;
         left: 0;
         right: 0;
-        height: 100%;
+        margin-top: 90px;
     }
 
     .center {
